# therapy_ai_summarizer

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/my_project/: crew.py  main.py
src/my_project/audio_processing/: convert_audio.py  diarize_audio.py  merge_results.py  pipeline_controller.py  stt_transcribe.py
src/my_project/config/: agents.yaml  tasks.yaml
src/my_project/tests/: test_main_api.py
